fix alignment of icon on home screen

--- a/css/style.scss
+++ b/css/style.scss
@@ -80,8 +80,13 @@ body{
         button{
             @include btn(16px,8px 14px,6px 10px 20px rgba(0,0,0,0.1));
             margin-top: 10px;
+            display: flex;
+            align-items: center;
             &:hover{
                 transform: scale(1.1);
+            }
+            ion-icon{
+                margin-left: 5px;
             }
         }
     }
